// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formml declaration grammar > annotation > declare annotation 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": []
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > declare annotation with multiple parameters 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name"
        },
        {
          "$type": "Parameter",
          "name": "value"
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > declare annotation with one parameter 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name"
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > parameters allow trailing comma 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name"
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be any 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "AnyType",
            "name": "any"
          }
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "AnyType",
            "name": "any"
          }
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "bool" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "PrimitiveType",
            "name": "bool"
          }
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "PrimitiveType",
            "name": "bool"
          }
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "datetime" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "PrimitiveType",
            "name": "datetime"
          }
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "PrimitiveType",
            "name": "datetime"
          }
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "decimal" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "PrimitiveType",
            "name": "decimal"
          }
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "PrimitiveType",
            "name": "decimal"
          }
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "num" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "PrimitiveType",
            "name": "num"
          }
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "PrimitiveType",
            "name": "num"
          }
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "text" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "PrimitiveType",
            "name": "text"
          }
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "PrimitiveType",
            "name": "text"
          }
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters should have an any type by default 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1"
        },
        {
          "$type": "Parameter",
          "name": "param2"
        }
      ]
    }
  ]
}"
`;
